--- a/frete.html
+++ b/frete.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="container">
@@ -27,9 +28,12 @@
                 <h4>Dados da entrega</h4>
             </div>
             <div class="row mb-5">
-                <div class="col-3">
+                <div class="col-3 d-flex">
                     <input type="text" class="form-control" placeholder="CEP" id="cep">
-                    <button type="button" class="btn btn-primary" id="search-cep">Buscar</button>
+                    <button type="button" class="btn btn-primary" id="search-cep">
+                        <i class="bi bi-search"></i>
+                        <span class="d-none spinner-border spinner-border-sm"></span>
+                    </button>
                 </div>
                 <div class="col-7">
                     <input type="text" class="form-control" placeholder="Endereço" id="address">
@@ -41,5 +45,9 @@
             <button type="submit" class="btn btn-success">Enviar pedido</button>
         </form>
     </div>
+
+<script src="./jquery-3.7.1.min.js"></script>
+<script src="./jquery.mask.min.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
